Fixed layout issue in view more information in club specific page

--- a/involveU-frontend/src/app/components/specific-club-page/specific-club-page.component.scss
+++ b/involveU-frontend/src/app/components/specific-club-page/specific-club-page.component.scss
@@ -255,70 +255,6 @@ hr {
 
 }
 
-.eventTitle {
-  grid-area: 1 / 1 / 2 / 2;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventDate {
-  grid-area: 1 / 2 / 2 / 3;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventStart {
-  grid-area: 2 / 1 / 3 / 2;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventEnd {
-  grid-area: 2 / 2 / 3 / 3;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventLocation {
-  grid-area: 3 / 1 / 4 / 2;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventLink {
-  grid-area: 3 / 2 / 4 / 3;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventDesc {
-  grid-area: 4 / 1 / 5 / 3;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventTransp {
-  grid-area: 5 / 1 / 6 / 3;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.eventButton {
-  grid-area: 6 / 1 / 7 / 3;
-  margin: 0px 20px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
 .dialogLabels {
   font-size: 20px;
   font-weight: 600;
